Adding emails to share module
